@@ -1,4 +1,4 @@
-// Copyright 2004-2009 Castle Project - http://www.castleproject.org/
+// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -14,19 +14,34 @@
 
 namespace Castle.Windsor.Tests
 {
-    using System;
-    using System.Runtime.Remoting;
-	using Castle.DynamicProxy;
-    using Castle.MicroKernel.Registration;
-    using Castle.Windsor.Tests.Components;
-    using Castle.Windsor.Tests.Interceptors;
+	using System.Runtime.Remoting;
 
-    using NUnit.Framework;
+	using Castle.DynamicProxy;
+	using Castle.MicroKernel.Registration;
+	using Castle.Windsor.Tests.Components;
+	using Castle.Windsor.Tests.Interceptors;
+
+	using NUnit.Framework;
 
 	[TestFixture]
 	public class SmartProxyTestCase
 	{
 		private IWindsorContainer container;
+
+		[Test]
+		public void ConcreteClassProxy()
+		{
+			container.Register(Component.For(typeof(ResultModifierInterceptor)).Named("interceptor"));
+			container.Register(Component.For(typeof(CalculatorService)).Named("key"));
+
+			var service = container.Resolve<CalculatorService>("key");
+
+			Assert.IsNotNull(service);
+#if (!SILVERLIGHT)
+			Assert.IsFalse(RemotingServices.IsTransparentProxy(service));
+#endif
+			Assert.AreEqual(7, service.Sum(2, 2));
+		}
 
 		[SetUp]
 		public void Init()
@@ -36,12 +51,6 @@ namespace Castle.Windsor.Tests
 			container.AddFacility("1", new MyInterceptorGreedyFacility());
 			container.AddFacility("2", new MyInterceptorGreedyFacility());
 			container.AddFacility("3", new MyInterceptorGreedyFacility());
-		}
-
-		[TearDown]
-		public void Terminate()
-		{
-			container.Dispose();
 		}
 
 		[Test]
@@ -70,19 +79,10 @@ namespace Castle.Windsor.Tests
 			Assert.AreEqual(7, service.Sum(2, 2));
 		}
 
-		[Test]
-		public void ConcreteClassProxy()
+		[TearDown]
+		public void Terminate()
 		{
-			container.Register(Component.For(typeof(ResultModifierInterceptor)).Named("interceptor"));
-			container.Register(Component.For(typeof(CalculatorService)).Named("key"));
-
-			var service = container.Resolve<CalculatorService>("key");
-
-			Assert.IsNotNull(service);
-#if (!SILVERLIGHT)
-			Assert.IsFalse(RemotingServices.IsTransparentProxy(service));
-#endif
-			Assert.AreEqual(7, service.Sum(2, 2));
+			container.Dispose();
 		}
 	}
 }
